--- a/01_intro/index.html
+++ b/01_intro/index.html
@@ -12,9 +12,9 @@
 
 
 
-  ### Week 1: Introduction 
+  ### GUANG WEI (JONATHAN) TENG
 
-  Here is an image: 
+  Hello! My name is Jonathan and I am from Taipei, Taiwan. This is one of my first experiences with code and the "maker" movement. The last time I heard this term was back in 8th grade Taiwanese public school in "life technology" class, where I was constantly scolded by an underpaid, middle-age, Taiwanese teacher. Hopefully, this experience woiuld be much better! I am excited to work with everyone in this community. 
 
   ![image of embroidery](./sew.png)
 
