--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>PHYSCI 70: Intro to Digital Fabrication </title>
+  <title>PHYS-S-12 : Intro to Digital Fabrication </title>
   <meta charset="utf-8">
   <link href="./style.css" rel="stylesheet">
 </head>
@@ -14,11 +14,11 @@
 
   ### About Me
 
-  Here is an image: 
+  Hi! I am Jonathan Teng from Taipei, Taiwan. This is one of my first experiences with actual website-making and the "maker" movement. Interestingly, the last time I heard this term was back in 8th grade when I was still in a Taiwanese public school. The only memories of that course was that the teacher had anger issues and would shout at me (NOT FUN!) This experience, though, seems different and I look foward to making projects and working with every one of you.
 
   ![image of embroidery](./sew.png)
 
-  And here is a [link](../index.html).
+  [LAST PAGE](../index.html).
 
 
 
