--- a/01_intro/index.html
+++ b/01_intro/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<title>PHYSCI 70: Intro to Digital Fabrication </title>
+<title>PHYS-S-12: Intro to Digital Fabrication </title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="../style.css" rel="stylesheet">
 
@@ -14,11 +14,11 @@
 
   ### GUANG WEI (JONATHAN) TENG
 
-  Hello! My name is Jonathan and I am from Taipei, Taiwan. This is one of my first experiences with code and the "maker" movement. The last time I heard this term was back in 8th grade Taiwanese public school in "life technology" class, where I was constantly scolded by an underpaid, middle-age, Taiwanese teacher. Hopefully, this experience woiuld be much better! I am excited to work with everyone in this community. 
+   Hi! I am Jonathan Teng from Taipei, Taiwan. This is one of my first experiences with actual website-making and the "maker" movement. Interestingly, the last time I heard this term was back in 8th grade when I was still in a Taiwanese public school. The only memories of that course was that the teacher had anger issues and would shout at me (NOT FUN!) This experience, though, seems different and I look foward to making projects and working with every one of you.
 
-  ![image of embroidery](./sew.png)
+  ![image of myself](./sew.png)
 
-  And here is a	[link](../index.html).
+  [last page](../index.html).
 
 
 
