--- a/01_intro/index.html
+++ b/01_intro/index.html
@@ -18,7 +18,9 @@
 
   ![image of myself](./joenathan.JPG)
 
-  [last page](../index.html).
+  this is me, as indicated by the photo, I am in desperate need of acne cream.
+
+  [GO BACK](../index.html).
 
 
 
