--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   
   <div class="row">
     <div class="col-sm-4">
-      ![sewing image](./image/download (1).gif) 
+      ![sewing image](./image/download.gif) 
       [Week 1: Introduction](./01_intro/index.html)
     </div>
     <div class="col-sm-4">
