--- a/index.html
+++ b/index.html
@@ -1,46 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<title>PHYS-S-12 </title>
+<title>Jonathan's Digital Fabrication</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="./style.css" rel="stylesheet">
 
 
 <body>
-<xmp theme="journal" style="display:none;">
+  <body style="background-color:#211d21;">
+<xmp theme="journal" style="display:none;" style="background-color:#211d21;">
 
-<div class="navbar" style="padding-top: 0px;"> </div>
 
-<div class="container-fluid bg-3 text-center">
+
+<div class="container-fluid bg-3 text-center" style="background-color:#211d21;">
+
   
   <div class="row">
     <div class="col-sm-4">
-      ![sewing image](./image/download.gif) 
-      [Week 1: Introduction](./01_intro/index.html)
+      <a href="./01_intro/index.html">
+         <img alt="INTRO" src="./image/download.gif" class=center>
     </div>
     <div class="col-sm-4">
-      ![sewing image](./01_intro/sew.png) 
-      [Broken Link]()
+      <a href="./01_intro/index.html">
+         <img alt="INTRO" src="./image/2.gif" class=center>
     </div>
     <div class="col-sm-4">
-      ![sewing image](./01_intro/sew.png) 
-      [Broken Link]()
+      <a href="./01_intro/index.html">
+         <img alt="INTRO" src="./image/3.gif" class=center>
     </div>
   </div>
 
   <div class="row">
     <div class="col-sm-4">
-      ![sewing image](./01_intro/sew.png) 
-      [Broken Link]()
+      <a href="./01_intro/index.html">
+         <img alt="INTRO" src="./image/4.gif" class=center>
     </div>
     <div class="col-sm-4">
-      ![sewing image](./01_intro/sew.png) 
-      [Broken Link]()
+      <a href="./01_intro/index.html">
+         <img alt="INTRO" src="./image/5.gif" class=center>
     </div>
     <div class="col-sm-4">
-      ![sewing image](./01_intro/sew.png) 
-      [Broken Link]()
+      <a href="./01_intro/index.html">
+         <img alt="INTRO" src="./image/6.gif" class=center> 
     </div>
+    <div class="col-sm-4">
+      <a href="./01_intro/index.html">
+         <img alt="INTRO" src="./image/7.gif" class=center>
+    </div>
+    <div class="col-sm-4">
+      <a href="./01_intro/index.html">
+         <img alt="INTRO" src="./image/8.gif" class=center>
+    </div>
+    <div class="col-sm-4">
+      <a href="./01_intro/index.html">
+         <img alt="INTRO" src="./image/9.gif" class=center>
+    </div>
+    <div class="col-sm-4">
+      <a href="./01_intro/index.html">
+         <img alt="INTRO" src="./image/10.gif" class=center>     
+    </div>
+    <div class="col-sm-4">
+      <a href="./01_intro/index.html">
+         <img alt="INTRO" src="./image/11.gif" class=center> 
+    </div>
+    <div class="col-sm-4">
+      <a href="./01_intro/index.html">
+         <img alt="INTRO" src="./image/12.gif" class=center>
+
   </div>
 </div>
 </div>
