--- a/01_intro/index.html
+++ b/01_intro/index.html
@@ -7,7 +7,7 @@
 
 <body>
 
-<body style="background-color:#211d21;">
+<body style="background-color:#211d21; color:floralwhite;">
 <xmp theme="journal" style="display:none;">
 
 
