--- a/12_final/index.html
+++ b/12_final/index.html
@@ -14,14 +14,19 @@
 
 <div class="container-fluid bg-3 text-center" style="background-color:#211d21;">
 
+
   <div class="row">
     <div class="col-sm-4">
-      <a href="./01_intro/index.html">
+      <a href="./12_final/index.html">
          <img alt="INTRO" src="./proposal.gif" class=center>
     </div>
     <div class="col-sm-4">
-      <a href="./02_2d/index.html">
+      <a href="./12_final/index.html">
          <img alt="INTRO" src="./12.gif" class=center>
+    </div>
+    <div class="col-sm-4">
+      <a href="../index.html">
+         <img alt="INTRO" src="../image/goback.gif" class=center>
     
 
   </div>
