--- a/01_intro/index.html
+++ b/01_intro/index.html
@@ -11,8 +11,11 @@
 <xmp theme="journal" style="display:none;">
 
 
-
-  ### GUANG WEI (JONATHAN) TENG
+<div>
+   </div>
+    <div class="col-sm-4">
+         <img alt="INTRO" src="./aboutme.gif" class=center>
+  </div>
 
    Hi! I am Jonathan Teng from Taipei, Taiwan. This is one of my first experiences with actual website-making and the "maker" movement. Interestingly, the last time I heard this term was back in 8th grade when I was still in a Taiwanese public school. The only memories of that course was that the teacher had anger issues and would shout at me (NOT FUN!) This experience, though, seems different and I look foward to making projects and working with every one of you.
 
