--- a/12_final/index.html
+++ b/12_final/index.html
@@ -17,7 +17,7 @@
 
   <div class="row">
     <div class="col-sm-4">
-      <a href="./12_final/index.html">
+      <a href="./proposal/index.html">
          <img alt="INTRO" src="./proposal.gif" class=center>
     </div>
     <div class="col-sm-4">
