--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
 
-<title>Jonathan's Digital Fabrication</title>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
+<title>Jonathan's Digital Fabrication</title> 
+ <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"> 
   <link href="./style.css" rel="stylesheet">
 
+</head>
 
 <body>
   <body style="background-color:#211d21;">
@@ -12,7 +14,7 @@
 
 
 
-<div class="container-fluid bg-3 text-center" style="background-color:#211d21;">
+ <div class="container-fluid bg-3 text-center" style="background-color:#211d21;">
 
   <div class="row">
     <div class="col-sm-4">
@@ -73,7 +75,7 @@
 </xmp>
 </body>
 
-<script src="https://strapdownjs.com/v/0.2/strapdown.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" ></script>
+<script src="https://strapdownjs.com/v/0.2/strapdown.js"></script> 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" ></script> 
 
 </html>
