--- a/01_intro/index.html
+++ b/01_intro/index.html
@@ -20,6 +20,7 @@
    Hi! I am Jonathan Teng from Taipei, Taiwan. This is one of my first experiences with actual website-making and the "maker" movement. Interestingly, the last time I heard this term was back in 8th grade when I was still in a Taiwanese public school. The only memories of that course was that the teacher had anger issues and would shout at me (NOT FUN!) This experience, though, seems different and I look foward to making projects and working with every one of you.
 
   ![image of myself](./joenathan.JPG)
+    <img class=food1>
 
   this is me, as indicated by the photo, I am in desperate need of acne cream.
 
