--- a/02_2d/index.html
+++ b/02_2d/index.html
@@ -1,28 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<title>PHYS-S-12: Intro to Digital Fabrication </title>
+
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="../style.css" rel="stylesheet">
+  <link href="./style.css" rel="stylesheet">
+
 
 <body>
+  <body style="background-color:#211d21;">
+<xmp theme="journal" style="display:none;" style="background-color:#211d21;">
 
 
-<xmp theme="journal" style="display:none;">
+
+<div class="container-fluid bg-3 text-center" style="background-color:#211d21;">
 
 
+  <div class="row">
+    <div class="col-sm-4">
+      <a href="./proposal/index.html">
+         <img alt="INTRO" src="./proposal.gif" class=center>
+    </div>
+    <div class="col-sm-4">
+      <a href="./12_final/index.html">
+         <img alt="INTRO" src="./12.gif" class=center>
+    </div>
+    <div class="col-sm-4">
+      <a href="../index.html">
+         <img alt="INTRO" src="../image/goback.gif" class=center>
+    
 
-  ### GUANG WEI (JONATHAN) TENG
-
-   Hi! I am Jonathan Teng from Taipei, Taiwan. This is one of my first experiences with actual website-making and the "maker" movement. Interestingly, the last time I heard this term was back in 8th grade when I was still in a Taiwanese public school. The only memories of that course was that the teacher had anger issues and would shout at me (NOT FUN!) This experience, though, seems different and I look foward to making projects and working with every one of you.
-
-  ![image of myself](./joenathan.JPG)
-
-  this is me, as indicated by the photo, I am in desperate need of acne cream.
-
-  [GO BACK](../index.html).
-
-
+  </div>
+</div>
+</div>
 
 </xmp>
 </body>
