--- a/02_2d/index.html
+++ b/02_2d/index.html
@@ -3,35 +3,46 @@
 
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="./style.css" rel="stylesheet">
-
+  <link href="../style.css" rel="stylesheet">
 
 <body>
-  <body style="background-color:#211d21;">
-<xmp theme="journal" style="display:none;" style="background-color:#211d21;">
+
+<body style="background-color:#211d21; color:floralwhite;">
+<xmp theme="journal" style="display:none;">
 
 
-
-<div class="container-fluid bg-3 text-center" style="background-color:#211d21;">
-
-
-  <div class="row">
+<div>
+   </div>
     <div class="col-sm-4">
-      <a href="./proposal/index.html">
-         <img alt="INTRO" src="./proposal.gif" class=center>
-    </div>
-    <div class="col-sm-4">
-      <a href="./12_final/index.html">
-         <img alt="INTRO" src="./12.gif" class=center>
-    </div>
-    <div class="col-sm-4">
-      <a href="../index.html">
-         <img alt="INTRO" src="../image/goback.gif" class=center>
-    
-
+         <img alt="INTRO" src="./download-3.gif" class=center>
   </div>
-</div>
-</div>
+
+   The first idea I had took inspiration from the robot arm and the smart kitchen knife I saw in class. I wanted to create a glove or gauntlet that allows the user to steer and fly a mini airplane with only their arm. Ultimately, I realized that it is probably not realistic for me to build a controllable flying plane in just seven weeks.
+
+<div>
+   </div>
+    <div class="col-sm-4">
+         <img alt="INTRO" src="./download-4.gif" class=center>
+  </div>
+
+  My current idea takes inspiration from my culture. Back in Taiwan, nearly everyone rides a motorcycle.
+
+<div>
+   </div>
+    <div class="col-sm-4">
+         <img alt="INTRO" src="./Featured-2.jpg" class=center>
+  </div>
+  Crazy highway in Taipei, Taiwan. 
+
+  Everyone back home who rides a motorcycle always complains about the weather. Of course, Taiwan is a tropical island, so wearing a helmet is unbearable. Therefore, I want to create a helmet that has air conditioning.
+
+  Of course, this idea has already been done; therefore, I wanted to add a twist to it. Inspired by the beer helmet found in American culture, I have decided to make my cooling system rely on cold beverages instead of an expensive, intricate, design.
+
+  My idea is to wrap small, metal pipes around the outside of a small fan and make a pump to constantly fill the pipes with a cold beverage of choice. The air created by the fan would be cooled by the cold liquid in the metal pipes, and the fan would be placed inside the helmet in order to cool down the air inside the helmet. 
+
+  [GO BACK](../index.html).
+
+
 
 </xmp>
 </body>
