--- a/02_2d/index.html
+++ b/02_2d/index.html
@@ -14,31 +14,74 @@
 <div>
    </div>
     <div class="col-sm-4">
-         <img alt="INTRO" src="./download-3.gif" class=center>
+         <img alt="INTRO" src="./download-7.gif" class=center>
   </div>
 
-   The first idea I had took inspiration from the robot arm and the smart kitchen knife I saw in class. I wanted to create a glove or gauntlet that allows the user to steer and fly a mini airplane with only their arm. Ultimately, I realized that it is probably not realistic for me to build a controllable flying plane in just seven weeks.
+   My first prototype was a shape that resembled a star. I found FUSION 360 to be a little hard to use for beginners, but I eventually got the hang of the sketching and mirror tools. To make this shape, I simply created two concentric circles and made the according cuts for 1/4 of the circle, then I simply mirrored the shape across the x and y axes. However, my calculations for the kerf was wrong, so my shape did not fit that well together.
+<div>
+   </div>
+    <div class="col-sm-4">
+         <img alt="INTRO" src="./IMG_1162_2.jpg" class=center>
+  </div>
+<div>
+</div>
 
 <div>
    </div>
     <div class="col-sm-4">
-         <img alt="INTRO" src="./download-4.gif" class=center>
+         <img alt="INTRO" src="./download-8.gif" class=center>
   </div>
 
-  My current idea takes inspiration from my culture. Back in Taiwan, nearly everyone rides a motorcycle.
+
+  For my second prototype, I still wanted to stick to the theme of a circle, so I decided to make something easier. This shape resembles a gear or a canned pineapple. Despite simplifying the shape, somehow, my calculations for kerf was still incorrect, so the shape still did not fit well.
+
+  <div>
+   </div>
+    <div class="col-sm-4">
+         <img alt="INTRO" src="./IMG_1219.jpg" class=center>
+  </div>
+<div>
+</div>
 
 <div>
    </div>
     <div class="col-sm-4">
-         <img alt="INTRO" src="./Featured-2.jpg" class=center>
+         <img alt="INTRO" src="./download-9.gif" class=center>
   </div>
-  Crazy highway in Taipei, Taiwan. 
 
-  Everyone back home who rides a motorcycle always complains about the weather. Of course, Taiwan is a tropical island, so wearing a helmet is unbearable. Therefore, I want to create a helmet that has air conditioning.
+  For my final prototype, I wanted to return back to the star-like shape and add a new notch on the top. To make this shape, I first modeled 
+  1/8 of a circle to make the notch on the side, and half of the notch on the top. To account for kerf (which I measured to be 0.4mm this time), I made the diameter of the inner circle (which influences the depth of the notch), (diameter - (thickness - kerf)). Although my measurements were a bit off for the arc length of the notch (a major downside to using circles is that arc lengths are much harder to optimize), the rest of the design seemed to work really well, and allows for the cardboard to be assembled in two different ways.
 
-  Of course, this idea has already been done; therefore, I wanted to add a twist to it. Inspired by the beer helmet found in American culture, I have decided to make my cooling system rely on cold beverages instead of an expensive, intricate, design.
+  <div>
+   </div>
+    <div class="col-sm-4">
+         <img alt="INTRO" src="./IMG_1218.jpg" class=center>
+  </div>
+<div>
+</div>
 
-  My idea is to wrap small, metal pipes around the outside of a small fan and make a pump to constantly fill the pipes with a cold beverage of choice. The air created by the fan would be cooled by the cold liquid in the metal pipes, and the fan would be placed inside the helmet in order to cool down the air inside the helmet. 
+<div>
+   </div>
+    <div class="col-sm-4">
+         <img alt="INTRO" src="./IMG_1217.jpg" class=center>
+  </div>
+
+  <div>
+  </div>
+  <div>
+   </div>
+    <div class="col-sm-4">
+         <img alt="INTRO" src="./download (12).gif" class=center>
+  </div>
+  After noticing that I forgot to measure a daily household object, I went online to search up the model of the fan of an airconditioning unit used back in Taiwan. The fan itself had a diameter of 57cm, and the outer frame of the fan had a diameter of 60cm. So I made these two objects and combined them both into one project.
+
+  <div>
+   </div>
+    <div class="col-sm-4">
+         <img alt="INTRO" src="./fan.png" class=center>
+  </div>
+<div>
+</div>
 
   [GO BACK](../index.html).
 
