--- a/03_electro/index.html
+++ b/03_electro/index.html
@@ -1,24 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<title>PHYS-S-12: Intro to Digital Fabrication </title>
+
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="../style.css" rel="stylesheet">
 
 <body>
 
-
+<body style="background-color:#211d21; color:floralwhite;">
 <xmp theme="journal" style="display:none;">
 
 
+<div>
+   </div>
+    <div class="col-sm-4">
+         <img alt="INTRO" src="./download-7.gif" class=center>
+  </div>
 
-  ### GUANG WEI (JONATHAN) TENG
+   My first prototype was a shape that resembled a star. I found FUSION 360 to be a little hard to use for beginners, but I eventually got the hang of the sketching and mirror tools. To make this shape, I simply created two concentric circles and made the according cuts for 1/4 of the circle, then I simply mirrored the shape across the x and y axes. However, my calculations for the kerf was wrong, so my shape did not fit that well together.
+<div>
+   </div>
+    <div class="col-sm-4">
+         <img alt="INTRO" src="./IMG_1162_2.jpg" class=center>
+  </div>
+<div>
+</div>
 
-   Hi! I am Jonathan Teng from Taipei, Taiwan. This is one of my first experiences with actual website-making and the "maker" movement. Interestingly, the last time I heard this term was back in 8th grade when I was still in a Taiwanese public school. The only memories of that course was that the teacher had anger issues and would shout at me (NOT FUN!) This experience, though, seems different and I look foward to making projects and working with every one of you.
+<div>
+   </div>
+    <div class="col-sm-4">
+         <img alt="INTRO" src="./download-8.gif" class=center>
+  </div>
 
-  ![image of myself](./joenathan.JPG)
 
-  this is me, as indicated by the photo, I am in desperate need of acne cream.
+  For my second prototype, I still wanted to stick to the theme of a circle, so I decided to make something easier. This shape resembles a gear or a canned pineapple. Despite simplifying the shape, somehow, my calculations for kerf was still incorrect, so the shape still did not fit well.
+
+  <div>
+   </div>
+    <div class="col-sm-4">
+         <img alt="INTRO" src="./IMG_1219.jpg" class=center>
+  </div>
+<div>
+</div>
+
+<div>
+   </div>
+    <div class="col-sm-4">
+         <img alt="INTRO" src="./download-9.gif" class=center>
+  </div>
+
+  For my final prototype, I wanted to return back to the star-like shape and add a new notch on the top. To make this shape, I first modeled 
+  1/8 of a circle to make the notch on the side, and half of the notch on the top. To account for kerf (which I measured to be 0.4mm this time), I made the diameter of the inner circle (which influences the depth of the notch), (diameter - (thickness - kerf)). Although my measurements were a bit off for the arc length of the notch (a major downside to using circles is that arc lengths are much harder to optimize), the rest of the design seemed to work really well, and allows for the cardboard to be assembled in two different ways.
+
+  <div>
+   </div>
+    <div class="col-sm-4">
+         <img alt="INTRO" src="./IMG_1218.jpg" class=center>
+  </div>
+<div>
+</div>
+
+<div>
+   </div>
+    <div class="col-sm-4">
+         <img alt="INTRO" src="./IMG_1217.jpg" class=center>
+  </div>
+
+  <div>
+  </div>
+  <div>
+   </div>
+    <div class="col-sm-4">
+         <img alt="INTRO" src="./download (12).gif" class=center>
+  </div>
+  After noticing that I forgot to measure a daily household object, I went online to search up the model of the fan of an airconditioning unit used back in Taiwan. The fan itself had a diameter of 57cm, and the outer frame of the fan had a diameter of 60cm. So I made these two objects and combined them both into one project.
+
+  <div>
+   </div>
+    <div class="col-sm-4">
+         <img alt="INTRO" src="./fan.png" class=center>
+  </div>
+<div>
+</div>
 
   [GO BACK](../index.html).
 
