--- a/03_electro/index.html
+++ b/03_electro/index.html
@@ -14,83 +14,28 @@
 <div>
    </div>
     <div class="col-sm-4">
-         <img alt="INTRO" src="./download-7.gif" class=center>
+         <img alt="INTRO" src="./download-14.gif" class=center>
   </div>
 
-   My first prototype was a shape that resembled a star. I found FUSION 360 to be a little hard to use for beginners, but I eventually got the hang of the sketching and mirror tools. To make this shape, I simply created two concentric circles and made the according cuts for 1/4 of the circle, then I simply mirrored the shape across the x and y axes. However, my calculations for the kerf was wrong, so my shape did not fit that well together.
+   After not coming to class one day due to a fever (it was not covid, I got tested), I came to the horrifying realization that I may have skipped the singlemost imporatant class of the semester. I went in and saw everyone sawing and cutting with all these fancy equipment. I was asked to make something moving, so I decided to make a water pump that relies on the centrifugal force of circular motion.
+
+   I connected the motor to make the spinning part of the pump which will lead the water to an exit.
 <div>
    </div>
     <div class="col-sm-4">
-         <img alt="INTRO" src="./IMG_1162_2.jpg" class=center>
-  </div>
-<div>
-</div>
-
-<div>
-   </div>
-    <div class="col-sm-4">
-         <img alt="INTRO" src="./download-8.gif" class=center>
-  </div>
-
-
-  For my second prototype, I still wanted to stick to the theme of a circle, so I decided to make something easier. This shape resembles a gear or a canned pineapple. Despite simplifying the shape, somehow, my calculations for kerf was still incorrect, so the shape still did not fit well.
-
-  <div>
-   </div>
-    <div class="col-sm-4">
-         <img alt="INTRO" src="./IMG_1219.jpg" class=center>
+         <img alt="INTRO" src="./ezgif-4-c72dc5e690.gif" class=center>
   </div>
 <div>
 </div>
+After this, I enclosed the spinning part of the pump inside a plastic pipe and placed two lids on each side of the pipe. I drilled a hole through one of the lids to make the pipe fit through, and drilled a hole through the other to make it fit on the motor.
 
 <div>
    </div>
     <div class="col-sm-4">
-         <img alt="INTRO" src="./download-9.gif" class=center>
+         <img alt="INTRO" src="./ezgif-4-8cbc961c87.gif" class=center>
   </div>
 
-  For my final prototype, I wanted to return back to the star-like shape and add a new notch on the top. To make this shape, I first modeled 
-  1/8 of a circle to make the notch on the side, and half of the notch on the top. To account for kerf (which I measured to be 0.4mm this time), I made the diameter of the inner circle (which influences the depth of the notch), (diameter - (thickness - kerf)). Although my measurements were a bit off for the arc length of the notch (a major downside to using circles is that arc lengths are much harder to optimize), the rest of the design seemed to work really well, and allows for the cardboard to be assembled in two different ways.
 
-  <div>
-   </div>
-    <div class="col-sm-4">
-         <img alt="INTRO" src="./IMG_1218.jpg" class=center>
-  </div>
-<div>
-</div>
+  Although the force was not as strong as I wanted it to be, I still felt satisfied that this idea works not only in theory, but also in an actual creation that I can make.
 
-<div>
-   </div>
-    <div class="col-sm-4">
-         <img alt="INTRO" src="./IMG_1217.jpg" class=center>
-  </div>
-
-  <div>
-  </div>
-  <div>
-   </div>
-    <div class="col-sm-4">
-         <img alt="INTRO" src="./download (12).gif" class=center>
-  </div>
-  After noticing that I forgot to measure a daily household object, I went online to search up the model of the fan of an airconditioning unit used back in Taiwan. The fan itself had a diameter of 57cm, and the outer frame of the fan had a diameter of 60cm. So I made these two objects and combined them both into one project.
-
-  <div>
-   </div>
-    <div class="col-sm-4">
-         <img alt="INTRO" src="./fan.png" class=center>
-  </div>
-<div>
-</div>
-
-  [GO BACK](../index.html).
-
-
-
-</xmp>
-</body>
-
-<script src="https://strapdownjs.com/v/0.2/strapdown.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" ></script>
-
-</html>
+ 
