--- a/03_electro/index.html
+++ b/03_electro/index.html
@@ -14,11 +14,10 @@
 <div>
    </div>
     <div class="col-sm-4">
-         <img alt="INTRO" src="./download-14.gif" class=center>
+         <img alt="INTRO" src="./download (14).gif" class=center>
   </div>
 
    After not coming to class one day due to a fever (it was not covid, I got tested), I came to the horrifying realization that I may have skipped the singlemost imporatant class of the semester. I went in and saw everyone sawing and cutting with all these fancy equipment. I was asked to make something moving, so I decided to make a water pump that relies on the centrifugal force of circular motion.
-
    I connected the motor to make the spinning part of the pump which will lead the water to an exit.
 <div>
    </div>
@@ -38,4 +37,14 @@ After this, I enclosed the spinning part of the pump inside a plastic pipe and p
 
   Although the force was not as strong as I wanted it to be, I still felt satisfied that this idea works not only in theory, but also in an actual creation that I can make.
 
- 
+ [GO BACK](../index.html).
+
+
+
+</xmp>
+</body>
+
+<script src="https://strapdownjs.com/v/0.2/strapdown.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" ></script>
+
+</html>
