--- a/04_micro/index.html
+++ b/04_micro/index.html
@@ -1,26 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<title>PHYS-S-12: Intro to Digital Fabrication </title>
+
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="../style.css" rel="stylesheet">
 
 <body>
 
-
+<body style="background-color:#211d21; color:floralwhite;">
 <xmp theme="journal" style="display:none;">
 
 
+<div>
+   </div>
+    <div class="col-sm-4">
+         <img alt="INTRO" src="./download (14).gif" class=center>
+  </div>
 
-  ### GUANG WEI (JONATHAN) TENG
+   After not coming to class one day due to a fever (it was not covid, I got tested), I came to the horrifying realization that I may have skipped the singlemost imporatant class of the semester. I went in and saw everyone sawing and cutting with all these fancy equipment. I was asked to make something moving, so I decided to make a water pump that relies on the centrifugal force of circular motion.
+   I connected the motor to make the spinning part of the pump which will lead the water to an exit.
+<div>
+   </div>
+    <div class="col-sm-4">
+         <img alt="INTRO" src="./ezgif-4-c72dc5e690.gif" class=center>
+  </div>
+<div>
+</div>
+After this, I enclosed the spinning part of the pump inside a plastic pipe and placed two lids on each side of the pipe. I drilled a hole through one of the lids to make the pipe fit through, and drilled a hole through the other to make it fit on the motor.
 
-   Hi! I am Jonathan Teng from Taipei, Taiwan. This is one of my first experiences with actual website-making and the "maker" movement. Interestingly, the last time I heard this term was back in 8th grade when I was still in a Taiwanese public school. The only memories of that course was that the teacher had anger issues and would shout at me (NOT FUN!) This experience, though, seems different and I look foward to making projects and working with every one of you.
+<div>
+   </div>
+    <div class="col-sm-4">
+         <img alt="INTRO" src="./ezgif-4-8cbc961c87.gif" class=center>
+  </div>
 
-  ![image of myself](./joenathan.JPG)
 
-  this is me, as indicated by the photo, I am in desperate need of acne cream.
+  Although the force was not as strong as I wanted it to be, I still felt satisfied that this idea works not only in theory, but also in an actual creation that I can make.
 
-  [GO BACK](../index.html).
+ [GO BACK](../index.html).
 
 
 
