--- a/04_micro/index.html
+++ b/04_micro/index.html
@@ -30,7 +30,7 @@ I first designed the circuits in Tinkercad and then made a simple rough sketch o
 <div>
    </div>
     <div class="col-sm-4">
-         <img alt="INTRO" src="./img_1266.jpg" class=center>
+         <img alt="INTRO" src="./IMG_1266.jpg" class=center>
   </div>
 
 
@@ -38,7 +38,7 @@ I first designed the circuits in Tinkercad and then made a simple rough sketch o
   <div>
    </div>
     <div class="col-sm-4">
-         <img alt="INTRO" src="./img_1267.jpg" class=center>
+         <img alt="INTRO" src="./IMG_1267.jpg" class=center>
   </div>
 This is the code I used for this project.
 <div class="boxed">
