--- a/12_final/proposal/index.html
+++ b/12_final/proposal/index.html
@@ -40,8 +40,29 @@
 
   My idea is to wrap small, metal pipes around the outside of a small fan and make a pump to constantly fill the pipes with a cold beverage of choice. The air created by the fan would be cooled by the cold liquid in the metal pipes, and the fan would be placed inside the helmet in order to cool down the air inside the helmet. 
 
-  [GO BACK](../index.html).
 
+<div>
+   </div>
+    <div class="col-sm-4">
+         <img alt="INTRO" src="./download (19).gif" class=center>
+  </div>
+
+  After discussion with the professor today, I have decided to make my project not a full helmet, but something that could be strapped on to a helmet.
+  <div>
+  The items needed are:
+</div>
+<div>
+  Copper Pipe (for the cool liquid to flow through)
+</div>
+  Motor * 2 (for the fan and the pump)
+  <div>
+  Some material that is elastic (for the strap)
+</div>
+  3d Printed fan blades and water pump
+</div>
+<div>
+  [GO BACK](../index.html).
+</div>
 
 
 </xmp>
