--- a/05_3d/index.html
+++ b/05_3d/index.html
@@ -40,6 +40,7 @@ I created a 2D cross section like this then rotated it around the Y-Axis to make
     <div class="col-sm-4">
          <img alt="INTRO" src="./ezgif-3-daba4879bf.gif" class=center>
   </div>
+  <a download href='./nozzle.stl'>Download my STL file <\a>
 I connected it to a water motor that I bought yesterday. (The pump was for a fish tank, and yes, I went to a pet store despite owning no pets)
 
 <div>
