--- a/06_in/thermistor/index.html
+++ b/06_in/thermistor/index.html
@@ -42,14 +42,15 @@
   </div>
 
 <pre>
-
+CODE HERE
+</pre>
 <div>
    </div>
     <div class="col-sm-4">
          <img alt="INTRO" src="./download (19).gif" class=center>
   </div>
 
-  After discussion with the professor today, I have decided to make my project not a full helmet, but something that could be strapped on to a helmet.
+  To test the lower limit of the thermistor, I placed it into the freezer. 
   <div>
   The items needed are:
 </div>
@@ -60,7 +61,7 @@
   <div>
   Some material that is elastic (for the strap)
 </div>
-  3d Printed fan blades and water pump
+  3d Printed fan blades and water pump s
 </div>
 <div>
   [GO BACK](../index.html).
