--- a/06_in/thermistor/index.html
+++ b/06_in/thermistor/index.html
@@ -92,7 +92,7 @@ void loop() {
 }
 </pre>
 
-<pre>
+
 
 <div>
    </div>
@@ -102,18 +102,52 @@ void loop() {
 
   To test the lower limit of the thermistor, I placed it into the freezer. 
   <div>
-  The items needed are:
-</div>
-<div>
-  Copper Pipe (for the cool liquid to flow through)
-</div>
-  Motor * 2 (for the fan and the pump)
+  
   <div>
-  Some material that is elastic (for the strap)
-</div>
-  3d Printed fan blades and water pump s
-</div>
-<div>
+   </div>
+    <div class="col-sm-4">
+         <img alt="INTRO" src="./IMG_1422.jpg" class=center>
+  </div>
+
+The lowest temperature tested was -13 degrees C. I am not sure if this was because it was an actual limit of the thermistor or it was just the temperature the freezer was at. I am leaning more towards the latter, as according to how temperature is calculated in this case, the lowest temperature should just be abosulute zero.
+
+    <div>
+        </div>
+        <div class="col-sm-4">
+            <img alt="high" src="./download (21).gif" class=center>
+To test the upper limit, I decided to just place the thermistor on an open fire.
+
+    <div>
+        </div>
+        <div class="col-sm-4">
+            <img alt="high" src="./unknown (3).png" class=center>
+
+Unfortunately, the results were lost; however, the highest temperature recorded was 347.3 degrees C, which had a resistance of 9 OHMs, which makes sense because the temperature approaches infinity when the resistance does.
+
+
+<table>
+  <tr>
+    <th>Temperature</th>
+    <th>Resistance</th>
+  </tr>
+  <tr>
+    <td>43.35</td>
+    <td>4614.2</td>
+  </tr>
+  <tr>
+    <td>38.89</td>
+    <td>5523</td>
+  </tr>
+    <tr>
+        <td>22.61</td>
+        <td>11136.36</td>
+    </tr>
+    <td>13.52</td>
+    <td><17063.5</td>
+</table>
+
+
+
   [GO BACK](../index.html).
 </div>
 
