--- a/06_in/sbs/index.html
+++ b/06_in/sbs/index.html
@@ -14,53 +14,69 @@
 <div>
    </div>
     <div class="col-sm-4">
-         <img alt="INTRO" src="./download-3.gif" class=center>
+         <img alt="INTRO" src="./circuit.gif" class=center>
   </div>
 
-   The first idea I had took inspiration from the robot arm and the smart kitchen knife I saw in class. I wanted to create a glove or gauntlet that allows the user to steer and fly a mini airplane with only their arm. Ultimately, I realized that it is probably not realistic for me to build a controllable flying plane in just seven weeks.
+   I have decided to make a scale that measures how many of the "stars" (which is just my first project) are placed on it.
+   <div>
+   </div>
+   This will be my circuit
 
 <div>
    </div>
     <div class="col-sm-4">
-         <img alt="INTRO" src="./download-4.gif" class=center>
-  </div>
+         <img alt="INTRO" src="./IMG_1383.jpg" class=center>
 
-  My current idea takes inspiration from my culture. Back in Taiwan, nearly everyone rides a motorcycle.
-
-<div>
-   </div>
-    <div class="col-sm-4">
-         <img alt="INTRO" src="./Featured-2.jpg" class=center>
-  </div>
-  Crazy highway in Taipei, Taiwan. 
-
-  Everyone back home who rides a motorcycle always complains about the weather. Of course, Taiwan is a tropical island, so wearing a helmet is unbearable. Therefore, I want to create a helmet that has air conditioning.
-
-  Of course, this idea has already been done; therefore, I wanted to add a twist to it. Inspired by the beer helmet found in American culture, I have decided to make my cooling system rely on cold beverages instead of an expensive, intricate, design.
-
-  My idea is to wrap small, metal pipes around the outside of a small fan and make a pump to constantly fill the pipes with a cold beverage of choice. The air created by the fan would be cooled by the cold liquid in the metal pipes, and the fan would be placed inside the helmet in order to cool down the air inside the helmet. 
 
 
 <div>
    </div>
     <div class="col-sm-4">
-         <img alt="INTRO" src="./download (19).gif" class=center>
+         <img alt="INTRO" src="./code.gif" class=center>
   </div>
 
-  After discussion with the professor today, I have decided to make my project not a full helmet, but something that could be strapped on to a helmet.
+Unfortunately, due to a saving error, ARDUINO somehow overwritten my code with a blank document. I still have documented the finished device anyways.
+
+
+<div>
+    Lets try it with 2 stars
+</div>
+
+
   <div>
-  The items needed are:
-</div>
-<div>
-  Copper Pipe (for the cool liquid to flow through)
-</div>
-  Motor * 2 (for the fan and the pump)
+  
   <div>
-  Some material that is elastic (for the strap)
-</div>
-  3d Printed fan blades and water pump
-</div>
+   </div>
+    <div class="col-sm-4">
+         <img alt="INTRO" src="./IMG_1379.gif" class=center>
+  </div>
+
+It says that there are four, +2 more, not bad.
 <div>
+    </div>
+    Lets try 4.
+
+    <div>
+        </div>
+        <div class="col-sm-4">
+            <img alt="high" src="./IMG_1377.gif" class=center>
+            +1, even better!
+
+<div>
+</div>
+Lets try 6.
+
+
+    <div>
+        </div>
+        <div class="col-sm-4">
+            <img alt="high" src="./IMG_1380.gif" class=center>
+
+it works perfectly!
+
+
+
+
   [GO BACK](../index.html).
 </div>
 
