--- a/07_out/index.html
+++ b/07_out/index.html
@@ -1,26 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<title>PHYS-S-12: Intro to Digital Fabrication </title>
+
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="../style.css" rel="stylesheet">
 
 <body>
 
-
+<body style="background-color:#211d21; color:floralwhite;">
 <xmp theme="journal" style="display:none;">
 
 
+<div>
+   </div>
+    <div class="col-sm-4">
+         <img alt="INTRO" src="./download (17).gif" class=center>
+  </div>
 
-  ### GUANG WEI (JONATHAN) TENG
+   After making my scale last time, I wanted to create something that would resemble an arcade machine that determined how hard a button is pressed.
+   <div>
+   </div>
+   To do that, I linked up my last assignment to an led strip with this code:
+   
+<div>
+   </div>
+    <div class="col-sm-4">
+         <img alt="INTRO" src="crosssection.png" class=center>
+  </div>
+<div>
+</div>
+I created a 2D cross section like this then rotated it around the Y-Axis to make the 3D shape, I then made 4 more holes into it.
 
-   Hi! I am Jonathan Teng from Taipei, Taiwan. This is one of my first experiences with actual website-making and the "maker" movement. Interestingly, the last time I heard this term was back in 8th grade when I was still in a Taiwanese public school. The only memories of that course was that the teacher had anger issues and would shout at me (NOT FUN!) This experience, though, seems different and I look foward to making projects and working with every one of you.
+<div>
+   </div>
+    <div class="col-sm-4">
+         <img alt="INTRO" src="./IMG_1340.jpg" class=center>
+  </div>
 
-  ![image of myself](./joenathan.JPG)
 
-  this is me, as indicated by the photo, I am in desperate need of acne cream.
+  This it what the final result looks like.
+  <div>
+   </div>
+    <div class="col-sm-4">
+         <img alt="INTRO" src="./ezgif-3-daba4879bf.gif" class=center>
+  </div>
+  <a download href='./nozzle.stl'>Download my STL file <\a>
+I connected it to a water motor that I bought yesterday. (The pump was for a fish tank, and yes, I went to a pet store despite owning no pets)
 
-  [GO BACK](../index.html).
+<div>
+   </div>
+    <div class="col-sm-4">
+         <img alt="INTRO" src="./download (18).gif" class=center>
+  </div>
+For the photogrammetry project, I decided to take a snapshot of my hand holding my project.
+<div>
+    Although a part of my hand and the nozzle itself was not rendered completely, the end result was still really cool.
+
+<div>
+   </div>
+    <div class="col-sm-4">
+         <img alt="INTRO" src="./hand.png" class=center>
+  </div>
+
+ [GO BACK](../index.html).
 
 
 
