--- a/07_out/index.html
+++ b/07_out/index.html
@@ -13,54 +13,35 @@
 
 <div>
    </div>
-    <div class="col-sm-4">
-         <img alt="INTRO" src="./download (17).gif" class=center>
+  NEON TEXT GENERATOR WEBSITE IS DOWN TODAY, SORRY!
   </div>
 
    After making my scale last time, I wanted to create something that would resemble an arcade machine that determined how hard a button is pressed.
    <div>
    </div>
    To do that, I linked up my last assignment to an led strip with this code:
-   
+   ```
+   CODE
+   ```
+
 <div>
    </div>
     <div class="col-sm-4">
-         <img alt="INTRO" src="crosssection.png" class=center>
+         <img alt="INTRO" src="IMG_1435.gif" class=center>
   </div>
 <div>
 </div>
-I created a 2D cross section like this then rotated it around the Y-Axis to make the 3D shape, I then made 4 more holes into it.
+The shorter the distance is between the copper plates, the "higher" the LEDs will go.
 
 <div>
    </div>
     <div class="col-sm-4">
-         <img alt="INTRO" src="./IMG_1340.jpg" class=center>
+         <img alt="INTRO" src="./trim.92770442-99DD-4917-9A5D-F020B7E4FF8F.gif" class=center>
   </div>
 
 
-  This it what the final result looks like.
-  <div>
-   </div>
-    <div class="col-sm-4">
-         <img alt="INTRO" src="./ezgif-3-daba4879bf.gif" class=center>
-  </div>
-  <a download href='./nozzle.stl'>Download my STL file <\a>
-I connected it to a water motor that I bought yesterday. (The pump was for a fish tank, and yes, I went to a pet store despite owning no pets)
+ After that, I used an oscilloscope. Although the graph did not change because I am using an LED strip, looking at this GIF, it could be seen that the harder I press the button, the lower the frequency.
 
-<div>
-   </div>
-    <div class="col-sm-4">
-         <img alt="INTRO" src="./download (18).gif" class=center>
-  </div>
-For the photogrammetry project, I decided to take a snapshot of my hand holding my project.
-<div>
-    Although a part of my hand and the nozzle itself was not rendered completely, the end result was still really cool.
-
-<div>
-   </div>
-    <div class="col-sm-4">
-         <img alt="INTRO" src="./hand.png" class=center>
-  </div>
 
  [GO BACK](../index.html).
 
